--- a/Maquette/src/maquette/view/ApprovisionnementView.fxml
+++ b/Maquette/src/maquette/view/ApprovisionnementView.fxml
@@ -6,33 +6,39 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="196.0" prefWidth="192.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maquette.controller.CommandeController">
+<VBox prefHeight="163.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maquette.controller.ApprovisionnementController">
     <children>
-        <VBox VBox.vgrow="ALWAYS" /> 
-        <HBox>
-            <children>
-                <HBox HBox.hgrow="ALWAYS" />
-                <ComboBox fx:id="cmbClient" prefWidth="150.0" promptText="Client" />                                
-                <HBox HBox.hgrow="ALWAYS" /> 
-            </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        <VBox VBox.vgrow="ALWAYS"  />
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
-                <ComboBox fx:id="cmbProduit" prefWidth="150.0" promptText="Produit" />                                
+                <ComboBox fx:id="cmbFournisseur" prefWidth="150.0" promptText="Fournisseur" />
                 <HBox HBox.hgrow="ALWAYS" /> 
+
             </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        </HBox>
+        <VBox VBox.vgrow="ALWAYS"  />
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
-                <TextField fx:id="txtQuantite" prefHeight="25.0" prefWidth="136.0" promptText="quantité" />                                
+
+                <ComboBox fx:id="cmbProduit" prefWidth="150.0" promptText="Produit" />
                 <HBox HBox.hgrow="ALWAYS" /> 
+
             </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        </HBox>
+        <VBox VBox.vgrow="ALWAYS"  />
+        <HBox>
+            <children>
+                <HBox HBox.hgrow="ALWAYS" /> 
+
+                <TextField fx:id="txtQuantite" promptText="Quantité" />
+                <HBox HBox.hgrow="ALWAYS" /> 
+
+            </children>
+        </HBox>
+        <VBox VBox.vgrow="ALWAYS"  />
+
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
@@ -40,8 +46,10 @@
                 <HBox HBox.hgrow="ALWAYS" /> 
                 <Button fx:id="btnOk" mnemonicParsing="false" onAction="#btnOk_OnAction" text="Ok" />
                 <HBox HBox.hgrow="ALWAYS" /> 
+
             </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        </HBox>
+        <VBox VBox.vgrow="ALWAYS"  />
+
     </children>
 </VBox>
