--- a/Maquette/src/maquette/view/FournisseurView.fxml
+++ b/Maquette/src/maquette/view/FournisseurView.fxml
@@ -6,33 +6,33 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="196.0" prefWidth="192.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maquette.controller.CommandeController">
-    <children>
-        <VBox VBox.vgrow="ALWAYS" /> 
-        <HBox>
-            <children>
-                <HBox HBox.hgrow="ALWAYS" />
-                <ComboBox fx:id="cmbClient" prefWidth="150.0" promptText="Client" />                                
-                <HBox HBox.hgrow="ALWAYS" /> 
-            </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+<VBox prefHeight="234.0" prefWidth="185.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maquette.controller.FournisseurController">
+    <children> 
+        <VBox VBox.vgrow="ALWAYS" />        
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
-                <ComboBox fx:id="cmbProduit" prefWidth="150.0" promptText="Produit" />                                
+                <TextField fx:id="txtNom" promptText="Désignation" />                                
                 <HBox HBox.hgrow="ALWAYS" /> 
             </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        </HBox>           
+        <VBox VBox.vgrow="ALWAYS" />             
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
-                <TextField fx:id="txtQuantite" prefHeight="25.0" prefWidth="136.0" promptText="quantité" />                                
+                <TextField fx:id="txtAdresse" promptText="Adresse" />                                 
+                <HBox HBox.hgrow="ALWAYS" /> 
+            </children>
+        </HBox>            
+        <VBox VBox.vgrow="ALWAYS" />           
+        <HBox>
+            <children>
+                <HBox HBox.hgrow="ALWAYS" /> 
+                <ComboBox fx:id="txtMatiere" editable="true" prefWidth="150.0" promptText="Matière première" />                                
                 <HBox HBox.hgrow="ALWAYS" /> 
             </children>
         </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        <VBox VBox.vgrow="ALWAYS" />        
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
@@ -42,6 +42,6 @@
                 <HBox HBox.hgrow="ALWAYS" /> 
             </children>
         </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
+        <VBox VBox.vgrow="ALWAYS" />        
     </children>
 </VBox>
