--- a/Maquette/src/maquette/view/AvoirView.fxml
+++ b/Maquette/src/maquette/view/AvoirView.fxml
@@ -6,32 +6,24 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="196.0" prefWidth="192.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maquette.controller.CommandeController">
+<VBox prefHeight="134.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maquette.controller.AvoirController">
     <children>
         <VBox VBox.vgrow="ALWAYS" /> 
         <HBox>
             <children>
-                <HBox HBox.hgrow="ALWAYS" />
-                <ComboBox fx:id="cmbClient" prefWidth="150.0" promptText="Client" />                                
+                <HBox HBox.hgrow="ALWAYS" /> 
+                <ComboBox fx:id="cmbClient" prefWidth="150.0" promptText="Client" />
                 <HBox HBox.hgrow="ALWAYS" /> 
             </children>
-        </HBox>        
+        </HBox>
         <VBox VBox.vgrow="ALWAYS" /> 
         <HBox>
             <children>
                 <HBox HBox.hgrow="ALWAYS" /> 
-                <ComboBox fx:id="cmbProduit" prefWidth="150.0" promptText="Produit" />                                
+                <TextField fx:id="txtMontant" promptText="Montant" />
                 <HBox HBox.hgrow="ALWAYS" /> 
             </children>
-        </HBox>        
-        <VBox VBox.vgrow="ALWAYS" /> 
-        <HBox>
-            <children>
-                <HBox HBox.hgrow="ALWAYS" /> 
-                <TextField fx:id="txtQuantite" prefHeight="25.0" prefWidth="136.0" promptText="quantité" />                                
-                <HBox HBox.hgrow="ALWAYS" /> 
-            </children>
-        </HBox>        
+        </HBox>
         <VBox VBox.vgrow="ALWAYS" /> 
         <HBox>
             <children>
@@ -41,7 +33,7 @@
                 <Button fx:id="btnOk" mnemonicParsing="false" onAction="#btnOk_OnAction" text="Ok" />
                 <HBox HBox.hgrow="ALWAYS" /> 
             </children>
-        </HBox>        
+        </HBox>
         <VBox VBox.vgrow="ALWAYS" /> 
     </children>
 </VBox>
